Fix styling for Index when on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,7 +148,7 @@ strong, h1, h2, h3, h4, h5 {
 
     @media screen and (max-width: $small) {
       ul {
-        margin: 10px 0px 0px 16px !important;
+        margin: 17px 0px 0px 16px !important;
         padding: 0px;
       }
     }
